Update GitHub links to new profile

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <div class="social-links">
                         <p class="social-title">Follow Me</p>
                         <div class="social-icons">
-                            <a href="https://github.com/Btiar-user" target="_blank" rel="noopener noreferrer" class="social-icon" title="GitHub">
+                            <a href="https://github.com/BrianNyakundi" target="_blank" rel="noopener noreferrer" class="social-icon" title="GitHub">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="http://www.linkedin.com/in/brian-nyakundi-bn295" target="_blank" rel="noopener noreferrer" class="social-icon" title="LinkedIn">
@@ -595,7 +595,7 @@
                 <div class="footer-section">
                     <h3>Follow Me</h3>
                     <div class="footer-social">
-                        <a href="https://github.com/BrianNyakundi/Management-system" target="_blank" rel="noopener noreferrer" title="GitHub">
+                        <a href="https://github.com/BrianNyakundi" target="_blank" rel="noopener noreferrer" title="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
                         <a href="http://www.linkedin.com/in/brian-nyakundi-bn295" target="_blank" rel="noopener noreferrer" title="LinkedIn">
