Update project title to 'Enterprise Resource Planning (ERP)'

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <img src="images/Management Dashboard.png" alt="Task Management App">
                     </div>
                     <div class="project-content">
-                        <h3>Management System</h3>
+                        <h3>Enterprise Resource Planning (ERP)</h3>
                         <p class="project-description">Windows desktop application using C# and .NET Framework to efficiently manage car dealership operations.</p>
                         <div class="project-tech">
                             <span class="tech-tag">C++</span>
